# jcli

./: LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
j_cli/: __main__.py  cli.py  config.py  notebook_writer.py
j_cli/commands/: exec_cmd.py  healthcheck.py  kernel_cmd.py  kernelspec.py  session.py
jcli/: __main__.py  cli.py  executor.py  kernel.py  output.py  server.py
jcli/commands/: exec_cmd.py  healthcheck.py  kernel_cmd.py  kernelspec.py  session.py
jupyter_jcli/: __main__.py  _enums.py  canonicalize.py  cli.py  diff_render.py  drift.py  executor.py  hook_debug.py  hook_decision.py  hooks_parser.py  kernel.py  notebook_writer.py  output.py  pair_baseline.py  pair_io.py  parser.py  text_merge.py  variables.py
jupyter_jcli/commands/: convert_cmd.py  exec_cmd.py  healthcheck.py  hooks_cmd.py  kernel_cmd.py  kernelspec.py  serve_cmd.py  session.py  setup_cmd.py  vars_cmd.py
skills/j-cli/: SKILL.md
skills/jcli/: SKILL.md
tests/: conftest.py  test_canonicalize.py  test_convert_cmd.py  test_diff_render.py  test_drift.py  test_enums.py  test_exec.py  test_healthcheck.py  test_hook_debug.py  test_hook_decision.py  test_hooks_cmd.py  test_hooks_pair_drift.py  test_hooks_parser.py  test_hooks_pre_commit.py  test_hooks_python_run.py  test_hooks_startup.py  test_kernel_cmd.py  test_kernelspec.py  test_notebook_writeback.py  test_pair_baseline.py  test_pair_io.py  test_serve_cmd.py  test_session.py  test_setup_cmd.py  test_setup_git_cmd.py  test_text_merge.py  test_variables.py  test_vars_cmd.py
(+1 files in other folders)
