[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jcli"
version = "0.1.0"
description = "CLI tool for LLM agents to operate Jupyter Lab servers"
requires-python = ">=3.10"
dependencies = [
    "click>=8",
    "jupyter-kernel-client>=0.7.3",
    "jupyter-server-client",
    "nbformat>=5",
]

[project.optional-dependencies]
test = [
    "pytest>=8",
    "pytest-asyncio",
    "jupyter-server>=2,<3",
    "ipykernel",
]

[project.scripts]
jcli = "jcli.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
