[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jupyter-jcli"
version = "0.2.1"
description = "CLI tool for LLM agents to operate Jupyter Lab servers"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "tttpob", email = "i@tpob.io" }]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "click>=8",
    "jupyter-kernel-client>=0.7.3",
    "jupyter-server-client",
    "nbformat>=5",
    "tree-sitter>=0.22",
    "tree-sitter-bash>=0.22",
]

[project.optional-dependencies]
test = [
    "pytest>=8",
    "pytest-asyncio",
    "jupyter-server>=2,<3",
    "ipykernel",
    "matplotlib",
]

[project.scripts]
j-cli = "jupyter_jcli.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["jupyter_jcli"]

[tool.pytest.ini_options]
testpaths = ["tests"]
